# Walmart-Data-Analysis

./: README.md  SQLqueries.sql  main.ipynb  pyproject.toml  requirements.txt
